[package]
name = "volt"
version = "0.1.0"
authors = ["XtremeDevX <xtremedevx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12.4"
reqwest = { version = "*", features = ["blocking"] }
indicatif = "0.9.0"
flate2 = "1.0.20"
tar = "0.4.33"
